--- a/css/matery.css
+++ b/css/matery.css
@@ -249,8 +249,8 @@ mark {
 }
 
 .bg-color {
-    background-image: linear-gradient(to right, #ec407a 0%, #7e57c2 100%);
-    opacity: 0.8;  //透明效果 值范围 0~1，看情况自己修改
+    background-image: linear-gradient(to right, #595959 0%, #434343 100%);
+    opacity: 1;  //透明效果 值范围 0~1，看情况自己修改
 }
 
 .text-color {
@@ -266,8 +266,8 @@ mark {
     position: fixed;
     bottom: 0;
     z-index: 300;
-    background: linear-gradient(to right, #ec407a 0%, #7e57c2 100%);
-    opacity: 0.8;
+    background: linear-gradient(to right, #595959 0%, #434343 100%);
+    opacity: 1;
 }
 
 .sidenav-overlay {
@@ -566,8 +566,8 @@ header .go-back i {
 }
 
 .bg-cover:after {
-    -webkit-animation: rainbow 60s infinite;
-    animation: rainbow 60s infinite;
+    /*-webkit-animation: rainbow 60s infinite;*/
+    /*animation: rainbow 60s infinite;*/
 }
 
 .bg-cover:before,
